src/test/ui/feature-gates/feature-gate-cfg_sanitize.stderr
error[E0658]: `cfg(sanitize)` is experimental and subject to change
  --> $DIR/feature-gate-cfg_sanitize.rs:1:11
   |
LL | #[cfg(not(sanitize = "thread"))]
   |           ^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/39699
   = help: add `#![feature(cfg_sanitize)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
